# AI-chatbot

./: .env.example  .gitignore  Makefile  README.md  TODO  main.py  model.py  pyproject.toml  requirements.txt
common/: config.py
memory/: README.md
tools/: get_weather.py
